--- a/src/ViridiApp.Web/Pages/Projects/Edit.razor
+++ b/src/ViridiApp.Web/Pages/Projects/Edit.razor
@@ -3,29 +3,20 @@
 @inject NavigationManager NavigationManager
 
 <PageTitle>New Project</PageTitle>
-
-<div class="card bg-light">
-    <div class="card-body">
-        <form>
-            <div class="form-group">
-                <label for="Title" class="control-label">Title</label>
-                <input form="Title" class="form-control" @bind="@project.Title" />
-            </div>
-
-            <div class="form-group">
-                <label for="Description" class="control-label">Description</label>
-                <textarea form="Title" class="form-control" @bind="@project.Description"></textarea>
-            </div>
-            <div class="form-group">
-                <input type="button" class="btn btn-primary" @onclick="@UpdateProject" value="Save"/>
-                <input type="button" class="btn btn-default" @onclick="@Cancel" value="Cancel"/>
-            </div>
-        </form>
+@if(_project == null)
+{
+    <p><em>Loading...</em></p>
+} 
+else
+{
+    <div class="card bg-light">
+        <div class="card-body">
+            <ProjectForm Project="_project" OnSubmit="SubmitForm" />
+        </div>
     </div>
-</div>
-
+}
 @code {
-    protected async void UpdateProject()
+    private async Task SubmitForm(Project project)
     {
         await ProjectService.UpdateProject(project);
         NavigationManager.NavigateTo("projects/" + Id);
@@ -38,10 +29,10 @@
     [Parameter]
     public int Id { get; set; }
 
-    private Project? project;
+    private Project? _project;
 
     protected override async Task OnInitializedAsync()
     {
-        project = await ProjectService.GetProject(Id);
+        _project = await ProjectService.GetProject(Id);
     }
 }
